the user knows that the zopectl initialization scripts don't need to
be run, i.e. when building a code upgrade in parallel to a running
site.

The fassembler:maildrop and fassembler:zeo projects now include this
skip_zopectl_scripts setting, with default 0.

Add a setting ``supervisor_var`` to the supervisor project, which
defaults to ``{{env.var}}/supervisor``.  This is used to build the
paths to the Unix socket file and pidfile used by supervisor.  It can
be useful to set this to a value other than ``{{env.var}}/supervisor``
if building an upgrade in parallel to a running site, so that both the
old and the new supervisor processes can run simultaneously without
interference.

0.5
===

Add ``num_extra_zopes`` property to the environ object, which looks
for a ``num_extra_zopes`` setting in the [general] section of
build.ini and returns it as an integer or 0 if no such setting exists.

This setting will then be used to fill in the value of
``opencore_remote_uri`` in the Frontend configuration, allowing the
frontend to proxy to a load-balanced set of Zope instances.

A ``num_extra_zopes`` setting has also been added to the fassembler:topp project, where it is saved to build.ini.

0.4
===

This is the first tag made for fassembler.  A lot happened before now but releases were never cut.

In this release:

* Added fassembler:extrazope project, which will build an additional Zope instance connected to the same ZEO server.

* In fassembler:opencore, made the ``debug`` setting actually work, to control whether zope starts in debug mode when running ``./opencore/bin/zopectl fg`` (where it previously always ran with ``debug-mode=on``) or ``./bin/start-opencore`` (where it previously always ran with ``debug-mode=off`)

* Added a setting ``never_create_virtualenv`` for fassembler.tasks.VirtualEnv, which, if set, makes that task act as an assertion of the given virtualenv's existence, so that a build can fail if the virtualenv hasn't already been created.